[fix] Improve readablity of Messages with Themeify
closes #47

--- a/octoprint_klipper/static/css/klipper.css
+++ b/octoprint_klipper/static/css/klipper.css
@@ -10,7 +10,7 @@
    border: 1px solid #ddd;
    border-radius: 3px;
    background-color: #eeeeef;
-   color: 333;
+   color: #333;
 }
 
 .plugin-klipper-log .error {
